freest/test/prog/Invalid/SessionTypes/ExposeInput/ExposeInput.fst
module ExposeError where

foo : Int
foo = receive 1